--- a/External Files/.project
+++ b/External Files/.project
@@ -10,9 +10,24 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>~7374e309a9784d89a</name>
+			<type>1</type>
+			<location>C:/Users/Dima/AppData/Local/Temp/~7374e309a9784d89a</location>
+		</link>
+		<link>
+			<name>~79ba27d42f414be98</name>
+			<type>1</type>
+			<location>C:/Users/Dima/AppData/Local/Temp/~79ba27d42f414be98</location>
+		</link>
+		<link>
 			<name>~8056e10125394a088</name>
 			<type>1</type>
 			<location>C:/Users/Dima/AppData/Local/Temp/~8056e10125394a088</location>
+		</link>
+		<link>
+			<name>~839280e14e034323a</name>
+			<type>1</type>
+			<location>C:/Users/Dima/AppData/Local/Temp/~839280e14e034323a</location>
 		</link>
 	</linkedResources>
 </projectDescription>
